# opsmanager

./: .gitignore  README.md
opsfront/: README.md  package.json  vue.config.js
opsfront/src/: permission.js  settings.js
opsfront/src/api/: host.js  log.js  user.js  zone.js
opsfront/src/layout/components/Sidebar/: index.vue
opsfront/src/router/: index.js
opsfront/src/store/: getters.js  index.js
opsfront/src/store/modules/: permission.js  user.js
opsfront/src/utils/: auth.js  request.js
opsfront/src/views/dashboard/: index.vue
opsfront/src/views/log/: index.vue
opsfront/src/views/login/: index.vue
opsfront/src/views/node/host/: index.vue
opsfront/src/views/user/: index.vue
opsmaster/: .dockerignore  Dockerfile  README.md  main.py  opsmaster.conf  pyproject.toml  requirements.txt
opsmaster/app/: __init__.py  config.py
opsmaster/app/core/: __init__.py  db.py  event.py  response.py  utils.py
opsmaster/app/grpc/: __init__.py  client.py
opsmaster/app/grpc/zone/: zone_pb2.pyi  zone_pb2_grpc.py
opsmaster/app/router/: __init__.py  user.py  zone.py
opsmaster/app/schema/: __init__.py  apimode.py  dbsmode.py
opsmaster/app/tasks/: __init__.py  zone.py
opsmaster/certs/: ca.crt  client.crt  client.key
opsprotos/: zone.proto
opsservant/: .dockerignore  Dockerfile  main.py  opsservant.conf  pyproject.toml  requirements.txt
opsservant/app/: __init__.py  applog.py  config.py
opsservant/app/core/: __init__.py  zone.py
opsservant/app/grpc/: server.py
opsservant/app/grpc/zone/: zone_pb2.py
opsservant/certs/: server.crt  server.key
(+1 files in other folders)
